<resources>
    <string name="app_name">Project2_layout</string>
    <string name="Myname">Muthuswamy Nadar</string>
    <string name="autoz">myauto</string>
    <string name="swamyx">mm</string>
    <string name="mybio">Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.
        Crafting a professional bio that effectively showcases your unique skills and accomplishments can be a challenging task. what to include, consider starting with the basics and keeping it simple and factual.


    </string>
        <string name="HintText">Enter your Name:-</string>
        <string name="robot_val">Robot Image</string>
    <string name="btn_name">Enter</string>
</resources>