<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF"
            android:contentDescription="@string/robot_val"
            android:padding="10dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView"
            style="@style/SwamyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/textpadd"
            android:text="@string/Myname" />

        <EditText
            android:id="@+id/HobbiesText"
            style="@style/SwamyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/swamyx"
            android:textColor="@color/cardview_dark_background"
            android:ems="10"
            android:hint="@string/HintText"
            android:inputType="text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/hobbytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="Addhobby"
            android:text="@string/btn_name" />

        <ScrollView
            style="@style/Base.Theme.Project2_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:padding="@dimen/textpadd"
                android:text="@string/mybio" />
        </ScrollView>
    </LinearLayout>

</layout>
